prevent entries from being cut off
verinice-veo#4508

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -172,3 +172,13 @@
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
 
+/* Enable multiline of right sidebar */
+.VPDocAsideOutline .outline-link {
+  white-space: normal;
+  word-break: break-word;
+  line-height: 1.5;      
+  padding: 4px 0;        
+}
+.VPDocAsideOutline li {
+  margin-bottom: 6px;
+}
